--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,11 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@home-monorepo/ui-kit": ["libs/ui-kit/src/index.ts"]
+      "@home-monorepo/cards": ["libs/cards/src/index.ts"],
+      "@home-monorepo/member-card": ["libs/cards/member-card/src/index.ts"],
+      "@home-monorepo/power-card": ["libs/cards/power-card/src/index.ts"],
+      "@home-monorepo/ui-kit": ["libs/ui-kit/src/index.ts"],
+      "@home-monorepo/welcome-card": ["libs/cards/welcome-card/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
