--- a/apps/home-dashboard/.eslintrc.json
+++ b/apps/home-dashboard/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "homeMonorepo",
+            "prefix": "dashboard",
             "style": "camelCase"
           }
         ],
