--- a/libs/cards/member-card/project.json
+++ b/libs/cards/member-card/project.json
@@ -2,7 +2,7 @@
   "name": "member-card",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/cards/member-card/src",
-  "prefix": "home-monorepo",
+  "prefix": "dashboard",
   "tags": [],
   "projectType": "library",
   "targets": {
