--- a/libs/cards/project.json
+++ b/libs/cards/project.json
@@ -2,7 +2,7 @@
   "name": "cards",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/cards/src",
-  "prefix": "home-monorepo",
+  "prefix": "dashboard",
   "tags": [],
   "projectType": "library",
   "targets": {
