--- a/libs/cards/welcome-card/.eslintrc.json
+++ b/libs/cards/welcome-card/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "homeMonorepo",
+            "prefix": "dashboard",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "home-monorepo",
+            "prefix": "dashboard",
             "style": "kebab-case"
           }
         ]
