--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,10 +15,11 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@home-monorepo/member-card": ["libs/cards/member-card/src/index.ts"],
+      "@home-monorepo/api": ["libs/api/src/index.ts"],
       "@home-monorepo/device-power-card": [
         "libs/cards/device-power-card/src/index.ts"
       ],
+      "@home-monorepo/member-card": ["libs/cards/member-card/src/index.ts"],
       "@home-monorepo/ui-kit": ["libs/ui-kit/src/index.ts"],
       "@home-monorepo/welcome-card": ["libs/cards/welcome-card/src/index.ts"]
     }
